# audit-intelligence-desk

./: .dockerignore  .env.example  .gitignore  ADR.md  CLAUDE.md  Dockerfile  README.md  architecture_block_diagram.md  changelog.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/ai/config/: agents.py  prompt_loader.py
app/ai/prompt/: all_sample_prompt.yaml
app/ai/prompt/hermione/v1/: prompt.yaml
app/ai/prompt/hermione_decompose/v1/: prompt.yaml
app/ai/prompt/hermione_escalation/v1/: prompt.yaml
app/ai/prompt/moody/v1/: prompt.yaml
app/ai/prompt/percy/v1/: prompt.yaml
app/api/v1/endpoints/: audit.py
app/guardrails/: citation.py  injection.py  pii.py
app/models/: schemas.py
app/services/: audit_store.py  hermione.py  llm.py  moody.py  orchestrator.py  percy.py  procedural.py  rag.py  signals.py
config/: app_config.yaml  model_config.yaml  prompt_config.yaml
data/: ground_truth.json  transactions.json
data/policies/: approver_relationship_policy.md  duplicate_payment_policy.md  off_hours_approval_policy.md  structuring_policy.md  vendor_verification_policy.md
data/redteam/: false_positive_fixture.json  injection_policy_fixture.md
tests/: conftest.py  test_api_audit.py  test_audit_store.py  test_guardrails.py  test_integration_agents.py  test_moody.py  test_procedural.py  test_rag.py  test_signals.py
