[project]
name = "audit-intelligence-desk"
version = "0.1.0"
description = "Policy-grounded multi-agent transaction audit system (Claude Agent SDK + FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.115",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
