[project]
name = "audit-intelligence-desk"
version = "0.1.0"
description = "Policy-grounded multi-agent transaction audit system (Claude Agent SDK + FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.115",
    "einops>=0.8.2",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
